# FastAPI-Video-Hosting

./: .gitignore  .postgres-env.example  .rabbit-env.example  README.md  docker-compose.debug.yaml  docker-compose.yaml  nginx_config.conf  pyproject.toml
auth_service/: pyproject.toml
auth_service/app/: config.py  main.py
auth_service/app/auth/: dependencies.py  exceptions.py  external.py  router.py  schemas.py  utils.py
notifications/: .docker-env.example  pyproject.toml
notifications/src/: config.py  main.py  schemas.py  tasks.py
notifications_bot/: .docker-env.example  pyproject.toml
notifications_bot/src/: config.py  database.py  main.py  models.py  repository.py  router.py  utils.py
notifications_service/: pyproject.toml
notifications_service/app/: config.py  main.py
notifications_service/app/notifications/: dependencies.py  enums.py  router.py  schemas.py  service.py  tasks.py  templates.py
s3_storage_service/: Dockerfile  pyproject.toml
s3_storage_service/app/: client.py  config.py  dependencies.py  main.py  router.py  schemas.py
server/: .docker-env.example  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2024_12_02_2004-95b8d36df433_initial.py  2024_12_04_1257-cea7fd972d27_add_watched_at_column_to_watch_history.py  2024_12_05_1359-1c55338d965d_add_liked_at_to_user_video_likes_table.py  2024_12_13_2242-37e4f665cb72_add_sessions_table.py  2024_12_13_2315-5565c8b7123d_add_expires_at_column_to_sessions_table.py  2024_12_14_1505-185627e382d0_add_videos_count_column_to_playlists.py  2024_12_16_0028-ee6fa46bdc06_update_datetime_columns.py  2024_12_17_1153-118807b3786e_add_trigram_indexes.py  2024_12_17_1603-ccd513b92836_add_notifications_table.py  2024_12_18_1528-b189840f6b74_update_users_table.py  2024_12_22_1426-1dcdd0688f4e_update_telegram_columns.py  2024_12_25_1940-a50e89917e7f_fix_video_title_max_length.py
server/src/: config.py  database.py  main.py  schemas.py  setup_app.py
server/src/admin/: admin.py  auth.py  models.py  repository.py  views.py
server/src/auth/: dependencies.py  router.py  utils.py
server/src/comments/: dependencies.py  enums.py  exc_handlers.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/notifications/: dependencies.py  exc_handlers.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
server/src/playlists/: dependencies.py  exc_handlers.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/s3_storage/: client.py  exc_handlers.py  utils.py
server/src/settings/: dependencies.py  exc_handlers.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/users/: dependencies.py  exc_handlers.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  uow.py  utils.py
server/src/videos/: dependencies.py  enums.py  exc_handlers.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/templates/: email_notification.html  telegram_notification.html  verify.html
video_service/: Dockerfile  pyproject.toml
video_service/alembic/: env.py
video_service/alembic/versions/: 2024_07_06_0139-1804f91ca12f_create_videos_table.py  2024_07_14_0013-5e003d1c4783_added_user_id_column.py
video_service/app/: config.py  main.py  models.py  routes.py
(+219 files in other folders)
