[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nickAnhel <anhimovn1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.3.4"
aio-pika = "^9.5.4"
celery = "^5.4.0"
flower = "^2.0.1"
pydantic = {extras = ["email"], version = "^2.10.4"}
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
