[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nickAnhel <anhimovn1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
aiohttp = "^3.9.5"
celery = "^5.4.0"
flower = "^2.0.1"
redis = "^5.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
