[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nickAnhel <anhimovn1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
aiobotocore = "^2.13.1"
aiofiles = "^24.1.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.3"
pillow = "^11.0.0"
sqladmin = {extras = ["full"], version = "^0.20.1"}
aio-pika = "^9.5.4"
celery = "^5.4.0"
flower = "^2.0.1"
jinja2 = "^3.1.4"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
